@@ -1,3 +1,7 @@
+2003-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* poe-xemacs.el (run-at-time): Redefine it to make it punctual.
+
 2003-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* poem-xm.el (char-length): Don't use `defun-maybe' to define it
